# seqcourse

./: .gitignore  LICENSE  README.md  RELEASING.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_distances.py
scripts/: export_traminer_goldens.R
src/seqcourse/: __init__.py  _palette.py  _utils.py  analysis.py  compat.py  costs.py  dataset.py  distances.py  plot_data.py  plotting.py  representatives.py  results.py
src/seqcourse/backends/: __init__.py  base.py  python.py
tests/: conftest.py  test_analysis.py  test_compat.py  test_costs.py  test_dataset.py  test_distances.py  test_parity_scaffolding.py  test_plotting.py  test_representatives.py
